logs/mobility/build.make.004.log
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target shared_messages_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_py
[  0%] [  0%] Built target shared_messages_generate_messages_cpp
Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target shared_messages_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target std_msgs_generate_messages_lisp
[35m[1mScanning dependencies of target mobility
[0m[ 50%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/ALSAController.cpp.o
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp: In member function ‘std::pair<float, float> ALSAController::getNextGoalPosition(std::pair<float, float>)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:23:49: error: expected ‘)’ before ‘;’ token
   float step_length = pow(xmin*unif_var,1/(mu-1);
                                                 ^
make[2]: *** [CMakeFiles/mobility.dir/src/ALSAController.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
